# leveldb

./: AUTHORS  CMakeLists.txt  clean.bat
example/: build_mingw.bat  leveldb_example.vcxproj  main.cpp
img/: leveldb_ai.ai
new/: CMakeLists.txt  README.md
new/example/: README.md  leveldb_example.sln
port/: port_win.h
